<resources>
    <string name="app_name">myapp</string>
    <string name="text1">View Details</string>
    <string name="text2">Call</string>
    <string name="text3">About us</string>
    <string name="title_activity_services">Services</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab1">Doctors</string>
    <string name="tab2">Hospitals</string>
    <string name="tab3">Pharmacies</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="name1">Dr Nilin Sukhtankar</string>
    <string name="Adress">Ponda-Goa</string>
    <string name="sp1">Orthopedic Surgeon</string>
    <string name="name2">Dr Vinay Priolkar</string>
    <string name="Adress2">Warkhande, Ponda-Goa</string>
    <string name="sp2">Cardiologist</string>
    <string name="title_activity_view_map">Map</string>
    <string name="entername">Enter name to search</string>
    <string name="ayud">AYUDA</string>
    <string name="mission_statement">Mission Statement</string>
    <string name="ayuda_has_been_developed_with_the_mission_to_reduce_the_delay_in_accessing_the_medical_facilities_during_the_time_of_a_calamity_microsoft_codefund_has_been_a_great_inspiration_to_us_in_developing_the_application">Ayuda has been developed with the mission to reduce the delay in accessing the medical facilities during the time of a calamity.Microsoft codefund has been a great inspiration to us in developing the application.</string>
    <string name="developers">Developers</string>
    <string name="divya_prabhu_yulan_d_costa_manasi_gude">Divya Prabhu , Yulan D\'Costa , Manasi Gude</string>
</resources>
