<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Services$PlaceholderFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/entername"
                    android:inputType="textPersonName"
                    android:text="Name" />
            </SearchView>

            <android.support.v7.widget.CardView
                android:id="@+id/doc2"
                android:layout_width="340dp"
                android:layout_height="120dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/doc3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/doc1" />

            <android.support.v7.widget.CardView
                android:id="@+id/doc1"
                android:layout_width="340dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="16dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/doc2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:scrollbarStyle="insideOverlay">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name1"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:fontFamily="serif" />

                    <TextView
                        android:id="@+id/sp1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp1"
                        android:textSize="18sp"
                        app:fontFamily="serif" />

                    <TextView
                        android:id="@+id/add1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Adress"
                        android:textSize="18sp"
                        app:fontFamily="serif" />

                    <Button
                        android:id="@+id/btntomap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Button" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>